# grab2md

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DEVELOPMENT_JOURNAL.md  INTEGRITY_REVIEW.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  WORK_BREAKDOWN_STRUCTURE.md  deploy.sh  html2md.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.html  test_links.md
.github/workflows/: ci.yml
benchmarks/main_content/: benchmark.py  fixtures.json
chatgpt_tools/: all_cookies_request.py  browser_like_request.py  direct_request.py  run_all_tests.py  test_token_api.py
chatgpt_tools/results_20250501_171845/: all_cookies_api_info.txt  all_cookies_api_response.json  all_cookies_info.txt  all_cookies_response.html  browser_info.txt  browser_response.html  cookies.json  direct_info.txt  direct_response.html
docs/: browser-rendering.md  configuration-example.md  coverage.md  deployment.md  main-content-benchmark.md  network-security.md  output-contract.md  releasing.md
docs/adr/: 0002-select-main-content-extraction.md
docs/internal/: DEVELOPMENT_JOURNAL.md  INTEGRITY_REVIEW.md  README.md  ROADMAP.md  WORK_BREAKDOWN_STRUCTURE.md  encoding_flow_analysis.md
extension/: README.md  THIRD_PARTY_NOTICES.md  background.js  chatgpt-cleaner.js  chatgpt-turndown.js  content-viewer.html  content-viewer.js  conversion-utils.js  logger.js  manifest.json  popup.html  popup.js  settings-store.js  styles.css  transcript-converter.js  turndown.js
extension/tests/: chromium-smoke.js  extension-regressions.test.js
output-examples/: 1.md
scripts/: check_requirement_exports.py  release_smoke.py
src/grab2md/: __init__.py  __main__.py
src/grab2md/cli/: cli.py  command_runtime.py  config_commands.py  conversion_presenter.py  conversion_service.py  presentation.py  runtime.py  state_commands.py
src/grab2md/config/: backup.py  loader.py  path_access.py  recovery.py  schema.py
src/grab2md/cookies/: browser_paths.py  chrome.py  database.py  errors.py  export.py  firefox.py  http_session.py  replay.py  session_manager.py  sources.py
src/grab2md/markdown/: archive.py  archiving.py  assets.py  batch_processor.py  converter.py  crawl_engine.py  crawler.py  document.py  link_rewriter.py  pipeline.py
src/grab2md/network/: auth_inputs.py  browser_renderer.py  header_manager.py  image_downloader.py  rate_limiter.py  request_handler.py  (+3 more)
src/html2md/: __init__.py  __main__.py
test_image_download/: README.md
test_output/code.visualstudio.com/: code.visualstudio.com_docs.md
tests/config/: test_backup.py  test_loader_integration.py  test_recovery.py  test_schema.py  test_writer.py
(+139 files in other folders)
